crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_array_types-2.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"{x: number, y: number}[]\")"
---
TypeAnn {
    kind: Array(
        TypeAnn {
            kind: Object(
                [
                    ObjectProp {
                        name: "x",
                        optional: false,
                        mutable: false,
                        type_ann: TypeAnn {
                            kind: Number,
                            span: 4..10,
                        },
                    },
                    ObjectProp {
                        name: "y",
                        optional: false,
                        mutable: false,
                        type_ann: TypeAnn {
                            kind: Number,
                            span: 15..21,
                        },
                    },
                ],
            ),
            span: 0..22,
        },
    ),
    span: 0..24,
}
