crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_array_types-3.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"T[][]\")"
---
TypeAnn {
    kind: Array(
        TypeAnn {
            kind: Array(
                TypeAnn {
                    kind: TypeRef(
                        "T",
                        None,
                    ),
                    loc: SourceLocation {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 2,
                        },
                    },
                },
            ),
            loc: SourceLocation {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 4,
                },
            },
        },
    ),
    loc: SourceLocation {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 6,
        },
    },
}
