crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_func_with_rest_param-2.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"fn (...args: Array<_>) -> _\")"
---
TypeAnn {
    kind: Function(
        FunctionType {
            type_params: None,
            params: [
                FuncParam {
                    pattern: Pattern {
                        kind: Rest(
                            RestPat {
                                arg: Pattern {
                                    kind: Ident(
                                        BindingIdent {
                                            name: "args",
                                            span: 7..11,
                                            mutable: false,
                                        },
                                    ),
                                    span: 7..11,
                                    inferred_type: None,
                                },
                            },
                        ),
                        span: 4..7,
                        inferred_type: None,
                    },
                    type_ann: Some(
                        TypeAnn {
                            kind: TypeRef(
                                "Array",
                                Some(
                                    [
                                        TypeAnn {
                                            kind: Wildcard,
                                            span: 19..20,
                                            inferred_type: None,
                                        },
                                    ],
                                ),
                            ),
                            span: 13..21,
                            inferred_type: None,
                        },
                    ),
                    optional: false,
                },
            ],
            ret: TypeAnn {
                kind: Wildcard,
                span: 26..27,
                inferred_type: None,
            },
            throws: None,
        },
    ),
    span: 0..2,
    inferred_type: None,
}
