crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_infer_type.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"infer T\")"
---
TypeAnn {
    kind: Infer(
        "T",
    ),
    span: 0..5,
    inferred_type: None,
}
